--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-amplify/auth": "^6.10.1",
     "@aws-amplify/core": "^6.9.2",
     "@aws-amplify/react-native": "^1.1.6",
+    "@aws-amplify/rtn-web-browser": "^1.1.1",
     "@aws-amplify/ui-react-native": "^2.4.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/netinfo": "^11.4.1",
